--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
     display: block;
 }
 
-.home_nav_btn, a {
+.home_nav_btn a {
     font-size: 1rem;
     text-decoration: none;
     margin: 1rem 0rem 1rem 0rem;
